--- a/style/style.scss
+++ b/style/style.scss
@@ -21,59 +21,132 @@ html, body{
   height: 100%;
   background-color: #FFFFFF;
   font-family: 'Raleway', sans-serif;
-  a{
+}
+body {
+  background: linear-gradient(to bottom, transparent 80%, #FFFFFF),
+      url("../img/tlo.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+}
+a{
     color: $lightgrey-nav;
   }
-  h1{
-    text-transform: uppercase;
-    margin: 40px 0 50px 0;
-    font-size: 25px;
-    font-weight: bold;
-    text-align: center;
-    &::before, &::after {
-      content: "";
-      display: inline-block;
-      height: 1px;
-      position: relative;
-      vertical-align: middle;
-      width: 30%;
-      margin: 0 20px;
-    }
+h1{
+  text-transform: uppercase;
+  margin: 40px 0 50px 0;
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+  &::before, &::after {
+    content: "";
+    display: inline-block;
+    height: 1px;
+    position: relative;
+    vertical-align: middle;
+    width: 30%;
+    margin: 0 20px;
   }
-  h2{
-    color: $darkgrey;
-    text-transform: uppercase;
-    margin: 0;
-    font-size: 20px;
-    line-height: 20px;
-    font-weight: bold;
-    text-align: center;
-    padding-bottom: 10px;
+}
+h2{
+  color: $darkgrey;
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 20px;
+  line-height: 20px;
+  font-weight: bold;
+  text-align: center;
+  padding-bottom: 10px;
+}
+.dark{
+  &::before{
+    background: linear-gradient(90deg, $darkgrey, $lightgrey);
   }
-  .dark{
-    &::before{
-      background: linear-gradient(90deg, $darkgrey, $lightgrey);
-    }
-    &::after{
-      background: linear-gradient(90deg, $lightgrey, $darkgrey);
-    }
+  &::after{
+    background: linear-gradient(90deg, $lightgrey, $darkgrey);
   }
-  .light{
-    &::before{
-      background: linear-gradient(90deg, white, $darkgrey);
-    }
-    &::after{
-      background: linear-gradient(90deg, $darkgrey, white);
-    }
+}
+.light{
+  &::before{
+    background: linear-gradient(90deg, white, $darkgrey);
   }
-  ul{
-    list-style-type: circle;
+  &::after{
+    background: linear-gradient(90deg, $darkgrey, white);
   }
- section{
-    padding: 20px 0 50px 0 ;
+}
+ul{
+  list-style-type: circle;
+}
+section{
+  padding: 20px 0 50px 0 ;
+  &:focus{
+    outline-color: transparent;
+  }
+}
+//----------------------------------------------------------
+// 1a. Nav
+//----------------------------------------------------------
+.sticky{
+  padding-top: 0;
+  position: fixed;
+  width: 100%;
+  padding: 10px;
+  top: 0;
+  z-index: 3;
+  background-color: white;
+  border-bottom: $lightgrey 1px solid;
+  border-radius: 0;
+  .fa-bars {
+    color: #666666;
+  }
+  #main-nav .nav-a {
+    color: #666666;
+    &:hover{
+      border-bottom: 1px solid #666666;
+      color: #666666;
+    }
     &:focus{
-      outline-color: transparent;
-    }
+      border-bottom: 1px solid;
+      color: #666666;
+    }  
+  }
+  .navbar-header img {
+    content: url("../img/logo-aparat-czarne.png");
+  }
+}
+nav {
+  margin-bottom: 0;
+  border-radius: 0;
+  padding: 10px;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.1);
+  /* For IE 5.5 - 7*/
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
+  // /* For IE 8*/
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
+  border: transparent;
+  .fa-bars {
+    color: #EFEFEF;
+  }
+}
+#main-nav li{
+  padding: 15px 14px 0 14px;
+}
+#main-nav .nav-a {
+  text-transform: uppercase;
+  font-size: 20px;
+  padding: 3px 5px;
+  border-bottom: 1px solid transparent;
+  display: inline-block;
+  &:hover{
+    border-bottom: 1px solid $lightgrey-nav;
+    color: $lightgrey-nav;
+    background-color: transparent;
+  }
+  &:focus{
+    border-bottom: 1px solid $lightgrey-nav;
+    color: $lightgrey-nav;
+    background-color: transparent;
   }
 }
 //----------------------------------------------------------
@@ -83,11 +156,7 @@ html, body{
   height: 100%;
   top: -70px;
   position: relative;
-  background: linear-gradient(to bottom, transparent 80%, #FFFFFF),
-      url("../img/tlo.jpg");
-  background-size: cover;
-  background-position: center;
-  text-align: center;
+   text-align: center;
   .logo{
     padding-top: 110px;
     margin: 0;
@@ -107,124 +176,6 @@ html, body{
       opacity: 0.5;
       &:hover{
         color: #586363;
-      }
-    }
-  }
-}
-//----------------------------------------------------------
-// 1a. Nav
-//----------------------------------------------------------
-.sticky{
-  padding-top: 0;
-  position: fixed;
-  top: 0;
-  //height: 50px;
-  z-index: 3;
-  background-color: white;
-  border-bottom: $lightgrey 1px solid;
-  border-radius: 0;
-}
-.navbar{
-  margin-bottom: 0;
-}
-nav{
-  width: 100%;
-  height: 70px;
-  background-color: rgba(255, 255, 255, 0.1);
-  z-index: 2;
-  /* For IE 5.5 - 7*/
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
-  /* For IE 8*/
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
-  position: relative;
-  .container-fluid{
-    padding-left: 30px;
-    .nav-logo{
-      position: absolute;
-    }
-    .logo-min{
-      height: 50px;
-      top: 50%;
-      margin-top: -25px;
-      .img-logo-min{
-        height: 50px;
-      }
-    }
-    .logo-min-sticky{
-      height: 50px;
-      top: 50%;
-      margin-top: -25px;
-      .img-logo-sticky{
-        height: 50px;
-        content: url("../img/logo-aparat-czarne.png");
-      }
-    }
-    .navbar-header{
-      button{
-        i{
-          color: #EFEFEF;
-        }
-      }
-    }
-    .navbar-header-sticky{
-      button{
-        i{
-          color: #666666;
-        }
-      }
-    }
-    .nav-links.navbar-collapse.in{
-      overflow-y: visible;
-      .nav-list{
-        padding-top: 50px;
-        flex-flow: column nowrap;
-        align-items: flex-end;
-      }
-    }
-    .nav-links{
-      .nav-list{
-        display: flex;
-       // flex-flow: row wrap;
-       // justify-content: space-between;
-        align-items: center;
-       // margin-bottom: 0;
-        height: 70px;
-        font-size: 20px;
-       // float: none;
-        li{
-          list-style-type: none;
-          text-transform: uppercase;
-          padding-left: 25px;
-          .nav-a{
-            text-decoration: none;
-            padding: 0 5px;
-            border-bottom: 1px solid transparent;
-            &:hover{
-              border-bottom: 1px solid $lightgrey-nav;
-              color: $lightgrey-nav;
-              background-color: transparent;
-            }
-            &:focus{
-              border-bottom: 1px solid $lightgrey-nav;
-              color: $lightgrey-nav;
-              background-color: transparent;
-            }
-          }
-          .nav-a-sticky{
-            color: #666666;
-            &:hover{
-              border-bottom: 1px solid #666666;
-              color: #666666;
-            }
-            &:focus{
-              border-bottom: 1px solid;
-              color: #666666;
-            }          
-          }
-        }
-      }
-      .nav-list-sticky{
-        height: 50px;
       }
     }
   }
